# puzzles-api

./: .dockerignore  .gitignore  .hadolint.yaml  CMakeLists.txt  Dockerfile  Readme.md  docker-compose.yml  loopy.R  loopy.c  requirements.txt
puzzles/: .gitignore  CMakeLists.txt  loopy.c
puzzles-clean/: .gitignore  CMakeLists.txt  c2rust-lib.rs  combi.rs  compile_commands.json  divvy.rs  drawing.rs  dsf.rs  findloop.rs  grid.rs  hat.rs  latin.rs  laydomino.rs  loopgen.rs  loopy.c  loopy.rs  malloc.rs  matching.rs  midend.rs  misc.rs  nullfe.rs  penrose.rs  penrose_legacy.rs  ps.rs  random.rs  sort.rs  spectre.rs  tdq.rs  tree234.rs  version.rs
puzzles-clean/cmake/: setup.cmake
puzzles-rust/: Cargo.toml  c2rust-lib.rs  combi.rs  divvy.rs  drawing.rs  dsf.rs  findloop.rs  grid.rs  latin.rs  laydomino.rs  loopgen.rs  loopy.rs  malloc.rs  nullfe.rs  sort.rs  tdq.rs  tree234.rs  version.rs
src/: main.py  run.py
